# bussdcc-config

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
src/bussdcc_config/: cli.py  version.py
src/bussdcc_config/config/: __init__.py  builder.py  config.py  field_meta.py  meta.py  schema.py  schema_field.py  store.py
src/bussdcc_config/config/formtree/: types.py
src/bussdcc_config/config/schema/: __init__.py  build.py  field.py  field_meta.py  flatten.py  group.py  node.py  unflatten.py
src/bussdcc_config/interface/web/: interface.py
src/bussdcc_config/interface/web/blueprints/: config.py  debug.py  home.py
src/bussdcc_config/interface/web/templates/: base.html
src/bussdcc_config/interface/web/templates/components/: _form.html  _formtree.jinja
src/bussdcc_config/interface/web/templates/config/: index.html  new.html
src/bussdcc_config/interface/web/templates/debug/: index.html
src/bussdcc_config/interface/web/templates/home/: index.html
src/bussdcc_config/message/: config.py
src/bussdcc_config/process/: __init__.py  config.py
src/bussdcc_config/service/: __init__.py  config.py
